--- a/back/package.json
+++ b/back/package.json
@@ -14,5 +14,8 @@
     "express": "^4.16.4",
     "hbs": "^4.1.2",
     "uuid": "^3.3.2"
+  },
+  "devDependencies": {
+    "@types/uuid": "^8.3.1"
   }
 }
